# pychessview

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: development.md  engine.md  qt_widget.md
examples/: qt_demo.py
src/pychessview/: __init__.py
src/pychessview/assets/themes/default/: settings.yaml
src/pychessview/engine/: __init__.py  view.py
src/pychessview/engine/core/: __init__.py  annotation_types.py  exceptions.py  highlight_types.py  label_types.py  primitives.py
src/pychessview/engine/core/domain/: __init__.py  game_adapter_proxy.py  game_spec.py
src/pychessview/engine/core/query/: __init__.py  board_query.py
src/pychessview/engine/core/session/: __init__.py  _helpers.py  annotation_session.py  board_session.py  board_session_builder.py  game_session.py  interaction_session.py  promotion_session.py  protocols.py
src/pychessview/engine/core/state/: __init__.py  annotation_state.py  base.py  highlight_state.py  piece_ui_state.py  promotion_state.py  view_state.py
src/pychessview/engine/factory/: __init__.py  null_game.py  standard_chess.py
src/pychessview/engine/interaction/: __init__.py  controller_event_result.py  controller_proxy.py
src/pychessview/engine/layout/: __init__.py  _helpers.py  layout_engine.py  primitives.py
src/pychessview/engine/render/: __init__.py  image_assets.py
src/pychessview/engine/theme/: __init__.py  arrow_theme.py  circle_theme.py  highlight_theme_name.py  label_theme.py  loaders.py  piece_theme.py  promotion_theme.py  theme.py  theme_name.py
src/pychessview/qt/: __init__.py
src/pychessview/qt/integration/: __init__.py  qt_controller_adapter.py
src/pychessview/qt/renderer/: __init__.py  painter_adapter.py  qt_renderer.py
src/pychessview/qt/widget/: __init__.py  chessboard_widget.py  events.py
tests/: __init__.py  conftest.py
tests/data/theme_stub/: settings.yaml
tests/integration/: __init__.py
tests/integration/pychessview/: __init__.py
tests/integration/pychessview/engine/: __init__.py  _helpers.py  test_view.py
tests/integration/pychessview/qt/: __init__.py  _helpers.py
tests/support/: __init__.py  pychessview_api.py  pychessview_qt_api.py
tests/unit/: __init__.py
tests/unit/pychessview/: __init__.py  test_public_api.py
tests/unit/pychessview/engine/: __init__.py  _helpers.py  test_view.py
tests/unit/pychessview/qt/: __init__.py  _helpers.py  conftest.py  test_public_api.py
tests/unit/tools/: __init__.py  test_devtools.py
tools/: __init__.py  bootstrap_dev.bat  bootstrap_dev.ps1  bootstrap_dev.sh  devtools.py  fix_docstrings.py
typings/imagesize/: __init__.pyi  imagesize.pyi
(+99 files in other folders)
